--- a/configuration.properties
+++ b/configuration.properties
@@ -1,7 +1,5 @@
-PageFactory.initElements(WebDriver driver this);
-
 browser=chrome
-url_qa2=http://login2.nextbasecrm.com/
-helpdeskLogin=helpdesk13@cybertekschool.com
-helpdeskPassword=UserUser
+url=https://login2.nextbasecrm.com/
+userLogin=helpdesk13@cybertekschool.com
+userPassword=UserUser
 
