--- a/configuration.properties
+++ b/configuration.properties
@@ -2,4 +2,6 @@ browser=chrome
 url=https://login2.nextbasecrm.com/
 userLogin=helpdesk13@cybertekschool.com
 userPassword=UserUser
+userLogin2=helpdesk14@cybertekschool.com
+userPassword2=UserUser
 
